# Control_Vehicle

./: README.md
px4_ros_com/: CMakeLists.txt  setup.py
px4_ros_com/launch/: teleop_dron.launch.py  vehicle_command_publisher.launch.py
scarab/: package.xml  setup.cfg  setup.py
scarab/launch/: control.launch.py  mavros_posix_sitl.launch.py  movement.launch.py  posix_sitl.launch.py  rover.launch.py  teleop_dron.launch.py
scarab/scarab/: arm.py  joy_node.py  joystick_handler.py  movement.py  rover.py  subprocess.py  subprocess2.py  subprocess3.py  subscriber.py
urdf_basics/: CMakeLists.txt  package.xml
urdf_basics/config/: display.rviz  view_bot.rviz
urdf_basics/description/: basic.urdf.xacro  inertias.xacro  robot.urdf.xacro  robot_core.xacro
urdf_basics/launch/: display.launch.py  dron_xbox.launch.py  gazebo.launch.py  launch_sim.launch.py  rsp.launch.py
urdf_basics/scripts/: teleop_gazebo.py
urdf_basics/worlds/: empty.world  obstacles  obstacles.world
